Accept a collection of states to be initialized